--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<nav class="navbar navbar-expand-lg bg-body-tertiary m-auto w-100 m-0 d-flex justify-content-center">
 					<div class="container-fluid w-90 p-0 m-0 flex-row-reverse">
 						<a class="navbar-brand p-0 m-0" href="#"
-							><img src="/img/unnamed.jpg" alt="Moustache" class="moustache"
+							><img src="img/unnamed.jpg" alt="Moustache" class="moustache"
 						/></a>
 						<button
 							class="navbar-toggler"
